# CCWtoskyrim-SE

./: AnimationManager.h  BehaviorHooks.cpp  ComboSystem.cpp  InputBuffer.cpp  InputBuffer.h  PCH.h  README.md  analyze_hkx.py  config  convert_hkx.py  extract_anibnd.py  index  retarget_skeleton.py
skse_plugin/: CMakeLists.txt  vcpkg.json
skse_plugin/src/: AnimEvents.cpp  AnimEvents.h  AnimationManager.cpp  BehaviorHooks.h  CCWConfig.h  ComboSystem.h  main.cpp
tools/: bone_mapping.json  config.json
